log
Thu 16 May 2024 08:06:25 PM UTC: 
 tests:  0|5
total_score: 0/70
a0e1e62
Thu 16 May 2024 08:25:36 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: statement with no effect [-Werror=unused-value]
   59 |                n->sudo[i][k];
      |                ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
2c025a2
Thu 16 May 2024 08:26:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9aba1b
Thu 16 May 2024 08:29:12 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|3
total_score: 25/70
b7267d8
Thu 16 May 2024 08:33:23 PM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: void value not ignored as it ought to be
   91 |       Node* n = pop(s);
      |                 ^~~
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3691e4
Thu 16 May 2024 08:33:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef0616f
Thu 16 May 2024 08:35:20 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: void value not ignored as it ought to be
   91 |       Node* n = pop(s);
      |                 ^~~
Compilation failed
6c224a9
Thu 16 May 2024 08:37:12 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:91:17: error: implicit declaration of function ‘get’; did you mean ‘getw’? [-Werror=implicit-function-declaration]
   91 |       Node* n = get(s, s->size - 1);
      |                 ^~~
      |                 getw
sudoku.c:91:25: error: invalid use of incomplete typedef ‘List’
   91 |       Node* n = get(s, s->size - 1);
      |                         ^~
cc1: all warnings being treated as errors
Compilation failed
aa20bc7
Thu 16 May 2024 08:41:00 PM UTC: 
 sudoku.c | 22 +++++++++-------------
 1 file changed, 9 insertions(+), 13 deletions(-)
 tests:  4|3
total_score: 30/70
1e57746
